Fixed -- Simple Menu | current menu item title not shown fully in left alignment

--- a/src/css/view/simple-menu.scss
+++ b/src/css/view/simple-menu.scss
@@ -632,6 +632,7 @@
         .eael-simple-menu-toggle-text {
             display: block;
             left: calc(100% + 20px);
+            white-space: nowrap;
         }
     }
 }
